[package]
name = "supernova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
name = "supernova"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.83"
criterion = "0.5"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }


[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "actor_benchmark"
harness = false
