[package]
name = "supernova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "example"
path = "src/examples/main.rs"


[[bin]]
name = "actor_example"
path = "src/examples/actor/main.rs"


[lib]
name = "supernova"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.83"

criterion = "0.5"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
uuid = {version = "1.11.0", features = ["v4"]}


[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
bencher = "0.1.5"

[[bench]]
name = "actor_benchmark"
harness = false
